samples/_failures_safe/1761453009_fe45f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32850023.c:159: error: expected ‘;’, ‘,’ or ‘)’ at end of input
